--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
     "trailingComma": "es5",
     "tabWidth": 4,
+    "UseTabs": true,
     "semi": true,
     "singleQuote": true,
     "jsxSingleQuote": true,
