--- a/.prettierrc
+++ b/.prettierrc
@@ -6,5 +6,5 @@
     "singleQuote": true,
     "jsxSingleQuote": true,
     "bracketSpacing": true,
-    "arrowParens": "avoid"
+    "arrowParens": "always"
 }
